Set body overscroll-behavior to stop pull-refresh (except on Safari). Set high accuracy on OpenLayers geolocate as otherwise tracking doesn't work at all.

--- a/src/default.css
+++ b/src/default.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     font-family: sans-serif;
     font-size: small;
+    overscroll-behavior: contain;
 }
 th, td {
     vertical-align: top;
